--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
   server:
     build:
       context: './server/'
-    ports: 
-      - "5000:5000"
+    environment:
+      - SERVER_PORT
+    ports:
+      - ${SERVER_PORT}:${SERVER_PORT}
     volumes:
       - ./server:/app
