--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,7 +1,15 @@
-FROM python:3.10.1
+FROM postgres:14
+
+
+RUN apt-get update && \
+    apt-get remove --purge -y python3 && \
+    apt-get -y install sudo && \
+    sudo apt-get -y install python3 pip libpq-dev
+
+RUN python3 -V
 
 WORKDIR /app
 
 COPY . .
-
-RUN python setup.py install
+# RUN pip install alembic 1.8.1
+RUN python3 setup.py install
