--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,13 @@ services:
   db:
     build:
       context: './db/'
+    environment:
+      - DB_URI
+      - POSTGRES_DB
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - DB_PORT
     ports:
-      - 5432:5432
+      - ${DB_PORT}:${DB_PORT}
     volumes:
       - ./db:/app
