--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - SERVER_PORT
       - DB_URI
+      - FLASK_SECRET_KEY
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
     volumes:
