--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
